<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">
            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/carTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTV"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/subTitle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/carSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/carTV"/>
            <TextView
                android:id="@+id/dailyRentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carSpinner"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/dailyRent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dailyRentET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dailyRentTV"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/dailyRent"
                android:inputType="textPersonName"
                android:text="0" />

            <LinearLayout
                android:id="@+id/dayCountGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/dailyRentET">
            <TextView
                android:id="@+id/daysTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/dailyRentET"
                android:layout_marginTop="30dp"
                android:text="@string/days_title"
                android:layout_weight="2"
                android:textStyle="bold"/>
                <TextView
                    android:id="@+id/dayCountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@+id/dailyRentET"
                    android:layout_marginTop="30dp"
                    android:text="@string/days"
                    android:layout_weight="1"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/quantitySeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/dayCountGroup"
                android:layout_marginTop="20dp"
                android:max="10"
                android:min="0"
                android:thumbTint="@color/black"
                android:indeterminateTint="@color/black"
                android:progressTint="@color/black"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                />

            <TextView
                android:id="@+id/driverAgeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantitySeekBar"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/age"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/ageButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:layout_below="@+id/driverAgeTV"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/lessThanTwentyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/less_than_twenty"
                    />
                <RadioButton
                    android:id="@+id/betweenTwentyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/between_twenty"
                    />
                <RadioButton
                    android:id="@+id/sixtyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/above_sixty"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/optionsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ageButtonGroup"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/options"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/optionGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/optionsTV">

                <CheckBox
                    android:id="@+id/gpsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"/>

                <CheckBox
                    android:id="@+id/childSeatCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child_seat"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"/>

                <CheckBox
                    android:id="@+id/millageCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/millage"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/priceGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/optionGroup">

                <EditText
                    android:id="@+id/priceET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/optionGroup"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/amount"
                    android:inputType="textPersonName"
                    android:text="0"
                    android:enabled="false" />

            <EditText
                android:id="@+id/totalPriceET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/optionGroup"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/total_price"
                android:inputType="textPersonName"
                android:text="0"
                android:enabled="false" />

            </LinearLayout>
            <Button
                android:id="@+id/viewDetailsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_details"
                android:enabled="false"
                android:layout_below="@+id/priceGroup"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>